--- a/swap.css
+++ b/swap.css
@@ -7,8 +7,13 @@
             --card-bg: #f8f9fa;
         }
 
+        @font-face {
+            font-family: 'Hanken Grotesk';
+            src: url('fontes/HankenGrotesk-SemiBold.ttf') format('truetype');
+        }
+
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Hanken Grotesk', serif;
             background-color: var(--light-bg);
             color: var(--text-dark);
             min-height: 100vh;
@@ -108,7 +113,7 @@
             border-radius: 15px;
             width: 100%;
             height: 75%;
-            background-image: url(programdor.jpg);
+            background-image: url(imagens/programdor.jpg);
             background-size: 100% 100%;
             position: absolute;
             top: 0;
@@ -156,8 +161,12 @@
             width: 100%;
             height: 10%;
             margin-top: auto;
-            background: blue;
-            border: solid;
+            background-color: #2e2e2e;
+            border-radius:40%;
+            border-top: solid 2px;
+            border-bottom: solid 2px;
+            border-color: rgb(0, 0, 0);
+            box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.75);
         }
 
         
@@ -166,9 +175,15 @@
             width: 85px;
             height: 85px;
             border-radius: 50%;
-            
         }
         
+        .more-button{
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: ;
+        }
+
         .card-title {
             font-weight: 600;
             color: #333;
@@ -218,6 +233,26 @@
         .btn-custom:hover {
             background-color: #03cc00;
             transform: scale(1.05);
+        }
+
+        .name{
+            color:white;
+        }
+
+        .profisao{
+            color:white;
+            width: 100%;
+            height: 50%;
+            background-color: rgb(180,180,180);
+            border-radius: 10px;
+        }
+
+        .infos{
+            color:white;
+            width: 30%;
+            height: 50%;
+            background-color: rgb(180,180,180);
+            border-radius: 10px;
         }
         
         @media (max-width: 992px) {
