melhoria na organizacao e sistema de tags no cadastro do freelancer

--- a/css/editar_perfil.css
+++ b/css/editar_perfil.css
@@ -130,7 +130,7 @@ body {
     border-radius: 15px;
     width: 100%;
     height: 75%;
-    background-image: url(imagens/programdor.jpg);
+    background-image: url(/imagens/blank-profile.webp);
     background-size: 100% 100%;
     position: absolute;
     top: 0;
